# ksd-OCR-Reader-Server

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  database.py  docker-compose.yml  init.sh  ksd-naver-ocr-server.db  main.py  oauth2.py  ocr_domain.md  pyproject.toml  requirements.txt  test.sh  token.py  token_ocr.py
KsdNaverOCRServer/: config.py  database.py  enums.py  hashing.py  main.py  oauth2.py  token_ocr.py
KsdNaverOCRServer/models/: manage.py  models_function.py  ocr.py  user.py
KsdNaverOCRServer/naver_clova/: repositories.py  schemas.py
KsdNaverOCRServer/ocr/: repositories.py  schemas.py  services.py  views.py
KsdNaverOCRServer/repository/: general_ocr.py  ocr.py  user.py
KsdNaverOCRServer/resources/: naver_ocr_domain_key.py
KsdNaverOCRServer/routers/: ocr.py  routers_function.py  user.py
KsdNaverOCRServer/schemas/: ocr.py  user.py
KsdNaverOCRServer/tests/: base.py  main.py  ocr.py  test_ocr.py  test_user.py
app/: __init__.py  admin.py  config.py  main.py  repositories.py
app/auth/: token_ocr.py
app/category/: admin.py  enums.py  models.py  repositories.py  schemas.py  services.py  views.py
app/database/: core.py  database.py  manage.py
app/general_ocr/: models.py
app/naver_clova/: schemas.py
app/naver_clova_ocr/: client.py  models.py  repositories.py  services.py
app/ocr/: admin.py  models.py  repositories.py  schemas.py  services.py  views.py
app/ocr_domain/: models.py  repositories.py  typed.py  views.py
app/user/: models.py
deploy/: supervisord.conf
models/: manage.py  ocr.py  user.py
repository/: ocr.py  user.py
resources/: naver_ocr_domain_key.py
result/: 1-1629644813689.json
routers/: ocr.py  user.py
schemas/: ocr.py  user.py
test/: main.py  ocr.py  user.py
tests/: conftest.py  database.py  factories.py  main.py  test_ocr.py  test_user.py
(+6 files in other folders)
